# npkill-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.ps1  install.sh  run.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  deleter.rs  lib.rs  main.rs  readdir.rs  risk.rs  scanner.rs  types.rs  update.rs
tests/: integration_test.rs
