[package]
name = "npkill-rs"
version = "0.3.0"
description = "Fast interactive tool to find and delete node_modules and .next directories"
edition = "2021"
license = "MIT"
authors = ["David Pere"]
homepage = "https://kierkegaard.space"
repository = "https://github.com/David-glitc/npkill-rs"

[[bin]]
name = "npkill-rs"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.28"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
humansize = "2"
dirs-next = "2"
mimalloc = "0.1"
rayon = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
